--- a/config/boards/pine64lts.conf
+++ b/config/boards/pine64lts.conf
@@ -2,7 +2,7 @@
 BOARD_NAME="PINE A64-LTS"
 BOARDFAMILY="sun50iw1"
 BOOTCONFIG_DEFAULT="sun50iw1p1_config"
-BOOTCONFIG="pine64-lts_defconfig"
+BOOTCONFIG="sopine_baseboard_defconfig"
 #
 MODULES="sunxi_codec sunxi_i2s sunxi_sndcodec 8723bs"
 MODULES_NEXT=""
